--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -5,7 +5,7 @@ a:link {
     font-size: x-large;
 }
 a:visited {
-    color: rgb(243, 25, 235)
+    color: rgb(243, 25, 235);
     text-decoration: underline;
     font-size: x-large;
 }
