--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Footer from '/src/components/Footer.astro';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<title>{pageTitle}</title>
 		<!-- The title of the page is set to "Weather Harmonies" -->
 		<style>
@@ -45,6 +46,8 @@ import Footer from '/src/components/Footer.astro';
 				margin-top: 1px;
 				margin-bottom: 10px;
 				font-family: sans-serif;}
+			div {
+				text-align: center;}
 		  
 			</style>
 	
@@ -55,8 +58,19 @@ import Footer from '/src/components/Footer.astro';
 		<h1>{pageTitle}</h1>
 		<h2>Welcome to Weather Harmonies  </h2>
 		<p> A weather dashboard with a little added melody</p>
-		 <script>
-		
-		 </script>
+		<div>
+    <button id="weather-btn" type="button">Click Here for Weather</button>
+</div>
+<Footer />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+<script>
+  document.querySelector("#weather-btn")
+    ?.addEventListener("click", function (e) {
+      e.preventDefault();
+      console.log("Weather button clicked");
+       window.location.href ="/Final-Project---Music-by-Mood/weatherdashboard/";
+    });
+</script>
 	</body>
 </html>
