--- a/src/pages/weatherdashboard.astro
+++ b/src/pages/weatherdashboard.astro
@@ -11,7 +11,8 @@ import Footer from '/src/components/Footer.astro';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <title>{pageTitle}</title>
         <!--- The title of the page is set to "Weather" --->
         <style> h1 {
 			    text-align: center; 
@@ -51,6 +52,7 @@ import Footer from '/src/components/Footer.astro';
             </form>
             <div id="weather-result"></div>
         <Footer />
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script>
 
   document.querySelector("#search")
