corrections pre-submission 2

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,5 +1,6 @@
 
 /* footer was not centered so I created a new CSS file for it and imported it into the Footer.astro component */
-p { text-align: center; 
+p { 
+   text-align: center; 
    margin-top: 1px;
-  margin-bottom: 20px; }
+   margin-bottom: 20px; }
