--- a/src/pages/weatherdashboard.astro
+++ b/src/pages/weatherdashboard.astro
@@ -13,7 +13,7 @@ import Footer from '/src/components/Footer.astro';
 		<meta name="generator" content={Astro.generator} />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <title>{pageTitle}</title>
-        <!--- The title of the page is set to "Weather" --->
+        <!-- The title of the page is set to "Weather" -->
         <style> h1 {
 			    text-align: center; 
                 margin-top: 100px;
@@ -22,9 +22,9 @@ import Footer from '/src/components/Footer.astro';
 			    padding: 10px;}
                 
                 p {
-                    text-align: center; 
-                    margin-top: 1px;
-				    margin-bottom: 20px;} 
+                text-align: center; 
+                margin-top: 1px;
+				margin-bottom: 20px;} 
                    
              div {
                 text-align: center; 
